<resources>
    <string name="app_name">community</string>
    <string name="user_name_input_hint">请输入用户名</string>
    <string name="user_email_input_hint">请输入邮箱</string>
    <string name="user_password_input_hint">请输入密码</string>
    <string name="user_register_button">注册</string>
    <string name="user_login_button">登录</string>
    <string name="user_login_text_view">去登录</string>
    <string name="user_register_text_view">返回注册</string>
    <string name="tab_menu_alert">帖子</string>
    <string name="tab_menu_normal">主界面</string>
</resources>
