<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".ui.user.LoginActivity">


    <RelativeLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/login_user_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:hint="@string/user_name_input_hint"
            android:textColorHint="@color/userNameInputTextHintColor"
            android:textColor="@color/userNameInputTextColor"
            android:textSize="15sp"
            android:maxLength="30"
            android:paddingLeft="15dp"
            android:background="@drawable/bg_register_user_name_edit"/>

        <EditText
            android:layout_below="@+id/login_user_name"
            android:id="@+id/login_user_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/user_password_input_hint"
            android:textColorHint="@color/userNameInputTextHintColor"
            android:textColor="@color/userNameInputTextColor"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:maxLength="30"
            android:paddingLeft="15dp"
            android:background="@drawable/bg_register_user_name_edit"/>

        <Button
            android:layout_below="@+id/login_user_password"
            android:id="@+id/login_user_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:text="@string/user_login_button"
            android:background="@drawable/bg_register_button"/>
    </RelativeLayout>

    <TextView
        android:textSize="13sp"
        android:id="@+id/login_user_register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/user_register_text_view"
        android:textColor="@android:color/white"
        android:layout_marginBottom="80dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>